<resources>
    <string name="app_name">REVA Alumni</string>
    <string-array name="Schools">
        <item>School of Civil Engineering</item>
        <item>School of Civil Mechanical</item>
        <item>School of Civil C and IT</item>
        <item>School of ECE</item>
        <item>School of EEE</item>
        <item>School of CSA</item>
        <item>School of Management</item>
        <item>School of Commerce</item>
        <item>School of Bio Chemistry</item>
        <item>School of Bio Tech</item>
        <item>School of Physics</item>
        <item>School of Chemistry</item>
        <item>School of Math</item>
        <item>School of Architecture</item>
        <item>School of Legal Studies</item>
        <item>School of Arts Humanity</item>
    </string-array>
    <string-array name="accomodation">
        <item>Single Room</item>
        <item>Double Room</item>
    </string-array>
    <string-array name="guestLecture">
        <item>Raise fund</item>
        <item>Guest event</item>
        <item>Guest lecturer</item>
        <item>Conference</item>
        <item>Any other</item>

    </string-array>
    <string name="title_activity_navigation">navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="web_client_id">147825252115-tnp0k4hqf91l8aehkaobm2ljujl3lfql.apps.googleusercontent.com</string>
    <string name="welcome">Welcome to REVA Alumni App</string>
    <string name="login_title">LOGIN</string>
    <string name="srn">SRN Num</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Create an Account</string>
    <string name="year_passed">Year of Passed</string>
    <string name="sign_up">SIGNUP</string>
    <string name="email">Email ID</string>
    <string name="phone_num">Phone Num</string>
    <string name="password_retype">Re-Type Password</string>
    <string name="verify">VERIFY</string>
    <string name="full_name">Full Name</string>
    <string name="re_enter">Re-enter Password</string>
    <string name="phone_verify">VERIFY PHONE NUM</string>
    <string name="otp">OTP</string>
    <string name="enter_otp">Enter Here</string>
    <string name="resend_otp">Resend OTP?</string>
    <string name="user_request">USER REQUESTS</string>
    <string name="confirm_request">CONFIRM</string>
    <string name="decline_request">DECLINE</string>
    <string name="user_confirm">CONFIRM</string>
    <string name="user_decline">DECLINE</string>
    <string name="forgot_password_title">FORGOT PASSWORD TITLE</string>
    <string name="send_otp">SEND OTP</string>
    <string name="or">OR</string>
    <string name="enter_otp_forgot">Enter OTP Here</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="old_password">Old Password</string>
    <string name="error_view">error view</string>
    <string name="TandC">I agree to the terms and condition of the AppCompany</string>
    <string name="title_activity_maps">Map</string>
    <string name="verification_mail">SEND EMAIL TO VERIFY</string>
    <string name="user_requests">USER REQUESTS</string>
    <string name="wait_authentication">WAIT FOR AUTHENTICATION</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="send_mail">SEND MAIL</string>
    <string name="phone_start">START</string>
    <string name="phone_verify_btn"> VERIFY AND SIGNIN</string>
    <string name="phone_otp_resend">RESEND</string>
    <string name="logout">logout</string>
    <string name="send_verification_success">status verification succeeded</string>
    <string name="instent_validation">instant validation</string>
    <string name="status_sign_in_failed">status sign in failed</string>
    <string name="status_verification_succeeded">status verification succeeded</string>
    <string name="instant_validation">validation</string>
    <string name="firebase_status_fmt">firebase status format</string>
    <string name="generate_otp">GENERATE OTP</string>
    <string name="check_profile">CHECK PROFILE</string>
    <string name="user_profile">USER PROFILE</string>
    <string name="signup_accept">ACCEPT</string>
    <string name="save_user">Save</string>
    <string name="home">HOME</string>
    <string name="user_name">User Name</string>
    <string name="hide_pass">Hide Password</string>
    <string name="show_pass">Show Password</string>
    <string name="Settings">Settings</string>
    <string name="Reset_pass">Reset Password</string>
    <string name="Delete_account">Delete Account</string>
    <string name="old_pass">Old Password</string>
    <string name="new_pass1">New Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="try_other_way">Try another way?</string>
    <string name="reset">Reset</string>
    <string name="update_email">Update Email</string>
    <string name="enter_email">Enter new email id</string>
    <string name="school_name">School:</string>
    <string name="course">Course</string>
    <string name="search">Search</string>
    <string name="send_request">Send Request</string>
    <string name="unfriend">Unfriend</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="confirm_frn_request">Accept</string>
    <string name="friends">Friends</string>
    <string name="friends_request">Friends Requests</string>
    <string name="friends_request_sent">Friends Request sent</string>
    <string name="chats">Chats</string>
    <string name="contacts">Contacts</string>
    <string name="profile">PROFILE</string>
    <string name="academic">ACADEMIC</string>
    <string name="personal">PERSONAL</string>
    <string name="working_profile">WORKING PROFILE</string>
    <string name="academic_profile">ACADEMIC PROFILE</string>
    <string name="personal_profile">PERSONAL PROFILE</string>
    <string name="address">Address</string>
    <string name="father">Name of your Father</string>
    <string name="dob">Date of birth</string>
    <string name="pincode">Pincode</string>
    <string name="blood_group">Blood group</string>
    <string name="employee">Employee</string>
    <string name="unemployee">UnEmployee</string>
    <string name="designation">Designation</string>
    <string name="domain">Domain</string>
    <string name="company_name">Company Name</string>
    <string name="job_seeker">Looking for a job?</string>
    <string name="skills_set">Skill Set</string>
    <string name="job_profile_interested">Job Profile Interested in?</string>
    <string name="interested_domain">Interested Domain</string>
    <string name="update">UPDATE</string>
    <string name="new_cred">NEW CREDENTIALS</string>
    <string name="new_pass">NEW PASSWORD</string>
    <string name="con_pass">CONFIRM PASSWORD</string>
    <string name="alumni_of">REVA Alumni of:</string>
    <string-array name="Gender">
        <item>Female</item>
        <item>Male</item>
    </string-array>
    <string-array name="spinnerLogin">
        <item>Admin</item>
        <item>User</item>

    </string-array>
</resources>