<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/admin_news_bg1"
    tools:context=".ResetPassword">

    <TextView
        android:id="@+id/resetPassTitle"
        android:layout_width="208dp"
        android:layout_height="34dp"
        android:layout_marginTop="68dp"
        android:gravity="center"
        android:text="@string/Reset_pass"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/oldPassReset"
        android:layout_width="210dp"
        android:padding="10dp"
        android:layout_height="45dp"
        android:background="@drawable/roundallsides"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/old_pass"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetPassTitle" />

    <EditText
        android:id="@+id/newPassReset"
        android:layout_width="210dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:padding="10dp"

        android:ems="10"
        android:background="@drawable/roundallsides"

        android:hint="@string/new_pass1"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oldPassReset" />

    <EditText
        android:id="@+id/confirmPassReset"
        android:layout_width="210dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/confirm_pass"
        android:padding="10dp"

        android:background="@drawable/roundallsides"

        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPassReset" />

    <TextView
        android:id="@+id/tryOtherWay"
        android:layout_width="210dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/try_other_way"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassReset" />

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="119dp"
        android:layout_height="55dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/rectangle_14"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tryOtherWay"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/progressBarReset"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetBtn"
        app:layout_constraintVertical_bias="0.023" />
</androidx.constraintlayout.widget.ConstraintLayout>